--- a/src/ESH-MultiVersionSwagger/ESH-MultiVersionSwagger.csproj
+++ b/src/ESH-MultiVersionSwagger/ESH-MultiVersionSwagger.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\edmilson.hora\source\repos\ESH-MultiVersionSwagger\ESH-MultiVersionSwagger\ESH-MultiVersionSwagger.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
